# rolling_trajectory_optimization

./: .gitignore  README.md  animate.py  finger.py  finger_solution.npz  gitignore  main.py  pyproject.toml
